Set default values for self preservation and instance name configurations
#17349 - As a development team member, I can rely on development process environment and application infrastructure services for working software fast delivery.

--- a/ocp-discovery-server/src/main/resources/application.yml
+++ b/ocp-discovery-server/src/main/resources/application.yml
@@ -5,8 +5,13 @@ logging:
 info:
   component: OCP Discovery Server
 eureka:
+  server:
+    enableSelfPreservation: false
   client:
     register-with-eureka: false
     fetch-registry: false
+  instance:
+    hostname: localhost
+
 
 
